@@ -5,7 +5,8 @@
 	    { "name" : "one_push_bracketing", "type": "boolean", "address": "0x17e"},
 	    { "name" : "bulb_timer", "type": "boolean", "address": "0x133"},
 	    { "name" : "bulb_timer_sec", "type": "uint16", "address": "0x134"},
-	    { "name" : "using_aperture_ring", "type": "boolean", "address": "0x18c"}
+	    { "name" : "using_aperture_ring", "type": "boolean", "address": "0x18c"},
+	    { "name" : "shake_reduction", "type": "boolean!", "address": "0x07d"}
 	]
     },
 
