@@ -130,6 +130,7 @@ typedef struct {
     pslr_bool_setting bulb_timer;
     pslr_uint16_setting bulb_timer_sec;
     pslr_bool_setting using_aperture_ring;
+    pslr_bool_setting shake_reduction;
 } pslr_settings;
 
 typedef struct {
